[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moleculon"
version = "0.0.1"
authors = [
  { name="Leandro Seixas", email="leandro.fisica@gmail.com" },
]
description = "A Python package for molecular simulations"
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.8"
dependencies = [
    'numpy',
    'pandas',
    'pytest',
    'scipy'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/leseixas/moleculon"
"Repository"= "https://github.com/leseixas/moleculon"

